[project]
name = "liminal-orm"
version = "4.4.4"
description = "An ORM and toolkit that builds on top of Benchling's platform to keep your schemas and downstream code dependencies in sync."
authors = [{ name = "DynoTx Open Source", email = "opensource@dynotx.com" }]
requires-python = ">=3.9,<4"
readme = "README.md"
dependencies = [
    "benchling-sdk>=1.21.2,<2",
    "bs4>=0.0.2,<0.0.3",
    "numpy>=1.23.5,<2",
    "pandas>=1.5.3,<3",
    "pydantic>=2,<=2.11",
    "requests>=2.32.3,<3",
    "rich>=13.9.2,<14",
    "sqlalchemy<2",
    "tenacity>=8,<10",
    "typer>=0.12.5,<0.13",
    "lxml>=5.3.0,<6",
    "psycopg2-binary>=2.9.10,<3",
    "tornado==6.5.0",
    "click>=8.0.0,<8.2.0",
]

[virtualenvs]
in-project = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[project.urls]
Homepage = "https://github.com/dynotx/liminal-orm"
Repository = "https://github.com/dynotx/liminal-orm"
Documentation = "https://dynotx.github.io/liminal-orm/"
"Bug Tracker" = "https://github.com/dynotx/liminal-orm/issues"

[project.scripts]
liminal = "liminal.cli.cli:app"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5,<7",
    "mkdocs-material>=9.5.41,<10",
    "mypy>=1.1.1,<2",
    "pre-commit>=4.0.1,<5",
    "pytest>=8.3.3,<9",
    "ruff>=0.6.9,<0.7",
    "sqlalchemy==1.4.49",
    "types-beautifulsoup4>=4.12.0.20240907,<5",
    "types-requests>=2.32.0.20240914,<3",
]

[tool.hatch.build.targets.sdist]
include = ["liminal"]

[tool.hatch.build.targets.wheel]
include = ["liminal"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/"
namespace_packages = true
no_implicit_optional = true
strict_optional = true
packages = "liminal"
plugins = ["pydantic.mypy", "numpy.typing.mypy_plugin"]
show_error_codes = true
warn_unused_ignores = true
disable_error_code=["union-attr"]

[[tool.mypy.overrides]]
module = ["sqlalchemy.*"]
ignore_missing_imports = true
